# asset/swagger/swagger.json
@@ -670,6 +670,30 @@
       }
     },
     "/flow/form/{id}": {
+      "get": {
+        "summary": "流程外置表单详情",
+        "operationId": "detail",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/FlowFormDetailResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "requestBody": {},
+        "tags": [
+          "流程外置表单相关"
+        ]
+      },
       "delete": {
         "summary": "删除流程外置表单",
         "operationId": "del",
@@ -692,74 +716,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/FlowFormDeleteRequest"
-            }
-          }
-        ],
-        "requestBody": {},
-        "tags": [
-          "流程外置表单相关"
-        ]
-      }
-    },
-    "/flow/form/{key}/{version}": {
-      "get": {
-        "summary": "流程外置表单详情",
-        "operationId": "detail",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/FlowFormDetailResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "key",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "version",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "requestBody": {},
-        "tags": [
-          "流程外置表单相关"
-        ]
-      },
-      "put": {
-        "summary": "编辑流程外置表单",
-        "operationId": "edit",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {}
-          }
-        },
-        "parameters": [
-          {
-            "name": "key",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "version",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/FlowFormEditRequest"
             }
           }
         ],
@@ -2476,6 +2432,9 @@
     "FlowFormAddRequest": {
       "type": "object",
       "properties": {
+        "key": {
+          "type": "string"
+        },
         "name": {
           "type": "string",
           "description": " 表单用途"
@@ -2495,6 +2454,7 @@
       },
       "title": "FlowFormAddRequest",
       "required": [
+        "key",
         "name",
         "desc",
         "rule",
@@ -2516,18 +2476,13 @@
     "FlowFormDetailRequest": {
       "type": "object",
       "properties": {
-        "key": {
+        "id": {
           "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int32"
         }
       },
       "title": "FlowFormDetailRequest",
       "required": [
-        "key",
-        "version"
+        "id"
       ]
     },
     "FlowFormDetailResponse": {
@@ -2544,43 +2499,6 @@
       },
       "title": "FlowFormDetailResponse",
       "required": [
-        "rule",
-        "option"
-      ]
-    },
-    "FlowFormEditRequest": {
-      "type": "object",
-      "properties": {
-        "key": {
-          "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "name": {
-          "type": "string",
-          "description": " 表单用途"
-        },
-        "desc": {
-          "type": "string",
-          "description": " 表单描述"
-        },
-        "rule": {
-          "type": "string",
-          "description": " 表单回显使用"
-        },
-        "option": {
-          "type": "string",
-          "description": " 表单回显使用"
-        }
-      },
-      "title": "FlowFormEditRequest",
-      "required": [
-        "key",
-        "version",
-        "name",
-        "desc",
         "rule",
         "option"
       ]
